--- a/src/main/resources/templates/include/paginate.html
+++ b/src/main/resources/templates/include/paginate.html
@@ -1,4 +1,16 @@
-<#macro paginate currentPage totalPage actionUrl urlParas="">
+<#macro paginate currentPage totalCount sizeNum actionUrl urlParas="">
+    <#local totalPage = totalCount / sizeNum + 1>
+    <#if (totalCount % sizeNum) == 0>
+        <#local totalPage = totalPage - 1>
+    </#if>
+
+    <#local totalPage = totalPage?floor>
+
+    <script type="text/javascript">
+        var myVariable = "${totalPage}";
+        console.log(myVariable);
+    </script>
+
     <#if (totalPage <= 0) || (currentPage > totalPage)><#return></#if>
     <#local startPage = currentPage - 4>
     <#if (startPage < 1)><#local startPage = 1></#if>
@@ -51,7 +63,7 @@
                 </#if>
                 <#if (currentPage == totalPage)>
                     <li class="paginate_button page-item next disabled">
-                        <a href="javascript:void(0)" class="page-link">下一页</a>
+                        <a href="javascript:void(0);" class="page-link">下一页</a>
                     </li>
                 <#else>
                     <li class="paginate_button page-item next">
