--- a/src/main/resources/templates/system/menu/list.html
+++ b/src/main/resources/templates/system/menu/list.html
@@ -109,7 +109,7 @@
                                         </div>
                                         <div class="col-sm-12 col-md-7">
                                             <#include "/include/paginate.html" />
-                                            <@paginate currentPage=pageData.getCurrent() totalPage=pageData.getPages()
+                                            <@paginate currentPage=pageData.getCurrent() totalCount=pageData.getTotal() sizeNum=pageData.getSize()
                                             actionUrl="/system/menu/list/" urlParas="?search=${search!}&pageSize=${pageSize!}" />
                                         </div>
                                 </div>
