--- a/src/main/resources/templates/include/layout_ff.html
+++ b/src/main/resources/templates/include/layout_ff.html
@@ -8,7 +8,7 @@
 
 <#macro html>
 <html>
-    <@header '趣味科技' '欢迎您~'></@header>
+    <@header></@header>
     <body class="sidebar-mini elevation-4 layout-footer-fixed" style="height: auto; font-size: 16px!important;">
         <div class="wrapper">
             <@navibar></@navibar>
