--- a/src/main/resources/templates/system/register.html
+++ b/src/main/resources/templates/system/register.html
@@ -1,6 +1,6 @@
 <#include "/include/header.html">
 <#include "/include/scripts.html">
-<@header '趣味科技' '欢迎您~'></@header>
+<@header></@header>
 <body class="hold-transition login-page" style="background-image: url('/${rootContext}/img/background.jpg'); background-size: 100%;">
 <div class="login-box">
     <div class="card">
