--- a/src/main/resources/templates/system/user/list.html
+++ b/src/main/resources/templates/system/user/list.html
@@ -2,7 +2,7 @@
 <#include "/include/scripts.html">
 <#import "/spring.ftl" as spring/>
 <html>
-<@header '趣味科技' '欢迎您~'></@header>
+<@header></@header>
 <body class="gray-bg">
     <div class="wrapper" style="overflow: scroll;">
         <section class="content">
