--- a/src/main/resources/templates/system/user/showProfile.html
+++ b/src/main/resources/templates/system/user/showProfile.html
@@ -1,6 +1,6 @@
 <#include "/include/layout_ff.html">
 <html>
-<@header '趣味科技' '欢迎您~'></@header>
+<@header></@header>
     <body class="gray-bg">
         <div class="wrapper" style="overflow: scroll;">
             <section class="content">
