--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <#include "/include/header.html">
 <#include "/include/iframe.html">
 <html>
-<@header '趣味科技' '欢迎您~'></@header>
+<@header></@header>
 <body class="gray-bg">
 <div class="wrapper" style="overflow: scroll;">
     <div class="middle-box text-center animated fadeInDown">
