--- a/src/main/resources/templates/include/footer.html
+++ b/src/main/resources/templates/include/footer.html
@@ -1,6 +1,6 @@
 <#macro footer>
     <footer class="main-footer">
-        <strong>Copyright © 2008~2024 趣味科技.</strong>
+        <strong>Copyright © 2008~2024 ${(enterprise)!}.</strong>
         All rights reserved.
         <div class="float-right d-none d-sm-inline-block">
             <b>Version</b> 1.0.0 （基于AdminLTE 3技术构建）
