--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -1,8 +1,8 @@
-<#macro header title="" subtitle="">
+<#macro header>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>${title!} | ${subtitle!}</title>
+        <title>${(enterprise)!}</title>
         <link rel="shortcut icon" href="/${rootContext}/logo/favicon.ico"/>
         <link rel="stylesheet" href="/${rootContext}/plugins/fontawesome-free/css/all.css">
         <link rel="stylesheet" href="/${rootContext}/plugins/ionicons/css/ionicons.min.css">
