--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -4,7 +4,7 @@
 <aside class="main-sidebar sidebar-dark-light elevation-4">
     <a href="javascript:void(0);" class="brand-link">
         <img src="/${rootContext}/logo/trademark.png" alt="Treeview" class="brand-image" style="opacity: .8">
-        <span class="brand-text font-weight-light">趣味科技</span>
+        <span class="brand-text font-weight-light">${(enterprise)!}</span>
     </a>
     <div class="sidebar">
         <div class="user-panel mt-2 pb-2 mb-2 d-flex">
