--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,5 +1,5 @@
 <#include "/include/header.html">
-<#include "/include/iframe.html">
+<#include "/include/scripts.html">
 <html>
 <@header></@header>
 <body class="gray-bg">
