--- a/src/main/resources/templates/include/navibar.html
+++ b/src/main/resources/templates/include/navibar.html
@@ -13,7 +13,7 @@
                 </a>
                 <div id="changeLang" class="dropdown-menu dropdown-menu-right p-0" style="left: inherit; right: 0px;">
                     <a href="#" class="nav-link dropdown-item" data-lang="zh_CN" data-flag="cn">
-                        <i class="flag-icon flag-icon-cn mr-2"></i>Chinese
+                        <i class="flag-icon flag-icon-cn mr-2"></i>中文
                     </a>
                     <a href="#" class="nav-link dropdown-item" data-lang="en_US" data-flag="us">
                         <i class="flag-icon flag-icon-us mr-2"></i>English
