--- a/src/main/resources/templates/system/user/resetPassword.html
+++ b/src/main/resources/templates/system/user/resetPassword.html
@@ -37,5 +37,5 @@
         </form>
     </div>
 </section>
-<@scripts "/${rootContext}/app/js/main.js"></@scripts>
+<@scripts "/${rootContext}/app/js/system/profile/profile.js"></@scripts>
 </body>
