--- a/src/main/resources/templates/system/user/showProfile.html
+++ b/src/main/resources/templates/system/user/showProfile.html
@@ -148,5 +148,5 @@
             </section>
         </div>
     </body>
-    <@scripts "/${rootContext}/app/js/main.js"></@scripts>
+    <@scripts "/${rootContext}/app/js/system/profile/profile.js"></@scripts>
 </html>
