--- a/src/main/resources/templates/include/layout_ff.html
+++ b/src/main/resources/templates/include/layout_ff.html
@@ -18,13 +18,13 @@
                     <a class="nav-link bg-light" href="#" data-widget="iframe-close"><i class="fas fa-window-close"></i></a>
                     <a class="nav-link bg-light" href="#" data-widget="iframe-scrollleft"><i class="fas fa-angle-double-left"></i></a>
                     <ul class="navbar-nav" role="tablist">
-                        <li class="nav-item active" role="presentation"><a class="nav-link active" data-toggle="row" id="tab-index" href="#panel-index" role="tab" aria-controls="panel-index" aria-selected="true">首页</a></li>
+                        <li class="nav-item active" role="presentation"><a class="nav-link active" data-toggle="row" id="tab-index" href="#panel-index" role="tab" aria-controls="panel-index" aria-selected="true">欢迎~</a></li>
                     </ul>
                     <a class="nav-link bg-light" href="#" data-widget="iframe-scrollright"><i class="fas fa-angle-double-right"></i></a>
                     <a class="nav-link bg-light" href="#" data-widget="iframe-fullscreen"><i class="fas fa-expand"></i></a>
                 </div>
                 <div class="tab-content">
-                    <div class="tab-pane fade active show" id="panel-index" role="tabpanel" aria-labelledby="tab-index"><iframe src="main" style="height: 671px;"></iframe></div>
+                    <div class="tab-pane fade active show" id="panel-index" role="tabpanel" aria-labelledby="tab-index"><iframe src="/main" style="height: 100%;"></iframe></div>
                     <div class="tab-empty">
                         <h2 class="display-4"></h2>
                     </div>
@@ -37,8 +37,5 @@
         </div>
     </body>
     <@scripts "/${rootContext}/app/js/main.js"></@scripts>
-    <script>
-
-    </script>
 </html>
 </#macro>
