--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -9,10 +9,16 @@
     <div class="sidebar">
         <div class="user-panel mt-2 pb-2 mb-2 d-flex">
             <div class="image">
-                <img src="${(currUser.avatar)!'/${rootContext}/img/default.png'}" class="img-circle elevation-2">
+                <img src="${currUser.avatar!'/${rootContext}/img/default.png'}" class="img-circle elevation-2">
             </div>
             <div class="info">
-                <a href="javascript:void(0);" class="d-block">${(currUser.nickName)!$((currUser.userName))}</a>
+                <a href="javascript:void(0);" class="d-block">
+                    <#if currUser.nickName?trim?length == 0>
+                        ${currUser.userName!}
+                    <#else>
+                        ${currUser.nickName}
+                    </#if>
+                </a>
             </div>
         </div>
         <div class="form-inline">
