--- a/src/main/resources/templates/system/register.html
+++ b/src/main/resources/templates/system/register.html
@@ -80,59 +80,6 @@
         </div>
     </div>
 </div>
-<script src="/${rootContext}/plugins/requirejs/require.js"></script>
-<script>
-    require.config({
-        baseUrl: '/' + window.staticContextPath + '/',
-        paths: {
-            jquery: "plugins/jquery/jquery.min",
-            layui: "plugins/layui/layui",
-        },
-        shim: {
-            layui: {
-                exports: "layui"
-            },
-        }
-    });
-
-    require(['jquery', "layui"], function ($) {
-        layui.use(['form', 'jquery'], function () {
-            let form = layui.form, layer = layui.layer, $ = layui.jquery;
-
-            form.on('submit(register)', function (data) {
-                let $1 = $.trim($("#username").val());
-                let $2 = $.trim($("#password").val());
-                let $3 = $.trim($("#validateCode").val());
-
-                if(!$("#agreeTerms").is(":checked")){
-                    layer.msg('请先同意协议后，再进行注册');
-                    return false;
-                }
-
-                $.ajax({
-                    url: '/register',
-                    type: 'post',
-                    data: {"username": $1, "password": $2, "validateCode": $3},
-                    success: function (data) {
-                        if (data.code == 200) {
-                            window.parent.frames.location.href = "/";
-                        } else if (data.code == 201) {
-                            layer.msg(data.msg);
-                            $(".captchaZone img").attr("src", "/captcha/image?t=" + new Date().getTime());
-                        } else {
-                            layer.msg(data.msg);
-                        }
-                    }
-                });
-
-                return false;
-            });
-        });
-
-        $(".captchaZone img").click(function () {
-            $(this).attr("src", "/captcha/image?t=" + new Date().getTime());
-        });
-    });
-</script>
 </body>
+<@scripts "/${rootContext}/app/js/system/register.js"></@scripts>
 </html>
