--- a/src/main/resources/templates/include/paginateBar.html
+++ b/src/main/resources/templates/include/paginateBar.html
@@ -1,14 +1,15 @@
+<#import "/spring.ftl" as spring/>
 <#macro paginate pageData actionUrl urlParas="">
 <div class="dataTables_info" style="padding-top:0px;">
-    <span>每页</span>
+    <span><@spring.message code='framework.page.eachPage'/></span>
     <select class="form-control" name="size" style="width: auto; display: initial;margin: 0 3px; padding: 1px 1px;" onchange="changePage(this)">
         <option value="10" ${(pageData.size==10)?string('selected="selected"','')}>10</option>
         <option value="20" ${(pageData.size==20)?string('selected="selected"','')}>20</option>
         <option value="50" ${(pageData.size==50)?string('selected="selected"','')}>50</option>
         <option value="100" ${(pageData.size==100)?string('selected="selected"','')}>100</option>
     </select>
-    <span>条</span>
-    <span>显示 ${((pageData.current -1) * pageData.size + 1)!}  -  ${(pageData.current * pageData.size)!} 条  共 ${(pageData.getTotal())!} 条记录</span>
+    <span><@spring.message code='framework.page.records'/></span>
+    <span><@spring.message code='framework.page.show'/>&nbsp;&nbsp;${((pageData.current -1) * pageData.size + 1)!}&nbsp;~&nbsp;${(pageData.current * pageData.size)!}&nbsp;&nbsp;<@spring.message code='framework.page.records'/>&nbsp;<@spring.message code='framework.page.total'/>&nbsp;${(pageData.getTotal())!}&nbsp;<@spring.message code='framework.page.recordNum'/></span>
 </div>
 <script>
     function changePage(obj) {
