--- a/src/main/resources/templates/include/paginateBar.html
+++ b/src/main/resources/templates/include/paginateBar.html
@@ -9,7 +9,8 @@
         <option value="100" ${(pageData.size==100)?string('selected="selected"','')}>100</option>
     </select>
     <span><@spring.message code='framework.page.records'/></span>
-    <span><@spring.message code='framework.page.showing'/>&nbsp;&nbsp;${((pageData.current -1) * pageData.size + 1)!}~${(pageData.current * pageData.size)!}<@spring.message code='framework.page.records'/>&nbsp;<@spring.message code='framework.page.total'/>&nbsp;${(pageData.getTotal())!}&nbsp;<@spring.message code='framework.page.recordNum'/></span>
+    <#assign args = ['${(pageData.getTotal())!}', '${((pageData.current -1) * pageData.size + 1)!}', '${(pageData.current * pageData.size)!}']>
+    <span><@spring.messageArgs 'framework.page.summary' args/></span>
 </div>
 <script>
     function changePage(obj) {
