--- a/src/main/resources/templates/system/login.html
+++ b/src/main/resources/templates/system/login.html
@@ -13,7 +13,7 @@
                         <div class="col-12">
                             <div class="input-group">
                                 <input type="text" name="username" id="username" class="form-control" required
-                                       lay-verify="required" placeholder="请输入用户名" autocomplete="off">
+                                       lay-verify="required" placeholder="请输入用户名" autocomplete="off" value="adminlte">
                                 <div class="input-group-append">
                                     <div class="input-group-text">
                                         <span class="fas fa-user"></span>
@@ -25,7 +25,7 @@
                     <div class="row mb-3 layui-form-item">
                         <div class="col-12">
                             <div class="input-group">
-                                <input type="password" name="password" id="password" class="form-control" required lay-verify="required" placeholder="请输入密码" autocomplete="off">
+                                <input type="password" name="password" id="password" class="form-control" required lay-verify="required" placeholder="请输入密码" autocomplete="off" value="adminlte">
                                 <div class="input-group-append">
                                     <div class="input-group-text">
                                         <span class="fas fa-lock"></span>
